edge_layer/google-gke/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rukou-deployment
spec:
  selector:
    matchLabels:
      app: rukou
  replicas: 3
  template:
    metadata:
      labels:
        app: rukou
    spec:
      containers:
        - name: edge
          image: "gcr.io/rukou-io/rukou-edge"
