edge_layer/google-gke/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rukou-service
spec:
  type: NodePort
  selector:
    app: rukou
  ports:
    - protocol: TCP
      port: 80
      targetPort: 50001
