edge_layer/google-gke/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rukou-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: rukou-ip
    networking.gke.io/managed-certificates: rukou-cert
    kubernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: rukou-service
    servicePort: 80
